# wezterm

./: Cargo.toml
config/src/: config.rs  keyassignment.rs  lib.rs  paseo.rs  tab_attention.rs
docs/: changelog.md
docs/config/lua/config/: show_tab_hover_preview.md  show_tab_icons.md  tab_attention.md  tab_bar_collapsible.md  tab_bar_placement.md  tab_bar_search.md  tab_bar_width.md  tab_hover_preview_border_width.md  tab_hover_preview_delay_ms.md
docs/config/lua/keyassignment/: OpenReviewPane.md
git-review/: Cargo.toml
git-review/src/: collapse.rs  git.rs  lib.rs  mode.rs  model.rs  parse.rs  tests.rs
git-review/tests/: untracked_perf.rs
nix/: flake.nix
paseo-client/: Cargo.toml
paseo-client/examples/: connect.rs
paseo-client/src/: binary_frames.rs  client.rs  e2ee.rs  envelope.rs  error.rs  events.rs  lib.rs  offer.rs  transport.rs
paseo-client/src/protocol/: agents.rs  diff.rs  mod.rs  stream.rs  terminals.rs  timeline.rs  workspaces.rs
paseo-mux/: Cargo.toml
paseo-mux/src/: domain.rs  lib.rs  pane.rs
plan/paseo-integration/: 00-architecture.md  01-paseo-client-crate.md  02-terminal-panes.md  03-agent-pane.md  04-config-keybindings-discovery.md  05-protocol-reference.md  06-testing-and-verification.md  README.md
wezterm-gui/: Cargo.toml
wezterm-gui/src/: commands.rs  main.rs  tabbar.rs
wezterm-gui/src/paseo/: agent.rs  mod.rs
wezterm-gui/src/review/: highlight.rs  mod.rs  paseo_source.rs
wezterm-gui/src/termwindow/: charselect.rs  keyevent.rs  mod.rs  mouseevent.rs  palette.rs  paneselect.rs  resize.rs
wezterm-gui/src/termwindow/render/: fancy_tab_bar.rs  mod.rs  paint.rs  pane.rs  split.rs  tab_bar.rs
wezterm-mux-server-impl/: Cargo.toml
wezterm-mux-server-impl/src/: lib.rs
