[package]
name = "paseo-client"
version = "0.1.0"
edition = "2021"
description = "Client for the Paseo daemon WebSocket protocol (relay/E2EE + local)"
license = "MIT"

[dependencies]
# Reused from the workspace
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true, features = ["std"] }
flume = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
parking_lot = { workspace = true }
log = { workspace = true }
getrandom = { workspace = true }

# New: WebSocket + TLS + crypto, all in the smol/futures family (no tokio)
async-tungstenite = { version = "0.28", default-features = false, features = ["handshake", "futures-03-sink"] }
async-net = "2.0"
futures-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"
crypto_box = { version = "0.9", features = ["std"] }
async-broadcast = "0.7"

[dev-dependencies]
smol = { workspace = true }
